hphp/hack/test/typecheck/abstract_typeconsts/multiple-bounds/inconsistent_bad.php.exp
ERROR: File "inconsistent_bad.php", line 23, characters 12-13:
Invalid argument (Typing[4110])
  File "inconsistent_bad.php", line 16, characters 29-36:
  Expected `UpperOne`
  File "inconsistent_bad.php", line 16, characters 71-78:
  But got `LowerTwo`
ERROR: File "inconsistent_bad.php", line 23, characters 12-13:
Invalid argument (Typing[4110])
  File "inconsistent_bad.php", line 16, characters 41-48:
  Expected `UpperTwo`
  File "inconsistent_bad.php", line 16, characters 56-63:
  But got `LowerOne`
ERROR: File "inconsistent_bad.php", line 23, characters 12-13:
Invalid argument (Typing[4110])
  File "inconsistent_bad.php", line 28, characters 13-20:
  Expected `UpperOne`
  File "inconsistent_bad.php", line 28, characters 52-59:
  But got `LowerTwo`
ERROR: File "inconsistent_bad.php", line 23, characters 12-13:
Invalid argument (Typing[4110])
  File "inconsistent_bad.php", line 28, characters 24-31:
  Expected `UpperTwo`
  File "inconsistent_bad.php", line 28, characters 41-48:
  But got `LowerOne`
